# chocolatechip

./: .gitattributes  .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt
semester-work/: README.md
semester-work/fall2025/ultralytics/: Dockerfile  LG_v2.yaml  Makefile  README.md  apptainer.def  epochs_iterations.py  hw_info.py  latest_error.txt  legogears.slurm  new_error.txt  run.py  train_setup.py
semester-work/spring2025/: collab.py
semester-work/spring2025/cvat/: README.md
semester-work/spring2025/darknet/: Dockerfile  Makefile  README.md  apptainer.def  box-whisker-map.py  class_heatmaps.py  confusion_matrix_tex.py  legogears.slurm  legogears_v100.slurm  noah-plot.py  per_class_yolo_f1.csv  plot.py  plot_common.py  scatterplot_confusion_matrix.py  training_table.py  vram_table.py
spring2025/: collab.py
spring2025/cvat/: Dockerfile  Makefile  README.md  copy_annotations.py  requirements.txt  run_dump.py
spring2025/cvat/cvat-api-container/: Dockerfile  Makefile  run_dump.py
spring2025/darknet/: Dockerfile  LegoGears.cfg  Makefile  README.md  apptainer.def  hipergator.slurm  legogears.slurm  script.sh  singularity.def
spring2025/statistics/: Dockerfile  Makefile  README.md  requirements.txt  statistics.py  super_secret.env
src/chocolatechip/: Benchmark.py  MySQLConnector.py  Pipeline.py  README.md  Stream.py  config.yaml  config_in.yaml  console.py  darknet.py  fastmotstarter.py  intersections.py  latency.py  parse_and_plot.py  times_config.py  training_metrics.csv  ultra.py  ultra_cm.py  ultralytics.py  unflag.py
(+3009 files in other folders)
