[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chocolatechip"
version = "0.1.0"
description = "maltlab helper"
authors = ["Jacques Fleischer <jacquespfleischer@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["maltlab", "university of florida"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Education",
]
homepage = "https://github.com/jpfleischer/chocolatechip"
documentation = "https://github.com/jpfleischer/chocolatechip/blob/main/README.md"
repository = "https://github.com/jpfleischer/chocolatechip.git"

[tool.poetry.dependencies]
python = "^3.12"
cloudmesh-common = "^5.0.60"
docopt = "^0.6.2"
setuptools = "^69.1.0"
wheel = "^0.42.0"
asciichartpy = "^1.5.25"
pymysql = "^1.1.1"
yaspin = "^3.0.2"
docker = "^7.1.0"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
moviepy = "1.0.3"
pandas = "^2.2.3"
pyperclip = "^1.9.0"
opencv-python = "^4.11.0.86"
Pillow = "^11.1.0"
PyYAML = "^6.0.2"
windows-curses = { version = "^2.4.1", platform = "win32"}
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
chip = "chocolatechip.console:main"
